fixed spacing around buttons

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ section {
     padding: 5px;
     border-radius: 5%;
     font-size: 0.75em;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 .clickhere:hover {
@@ -57,6 +57,10 @@ img {
     height: 250px;
     width:auto;
     margin-right: 20px;
+}
+
+#ready {
+    margin-bottom: 50px;
 }
 
 .display-scores {
